# ConvexHire

./: .gitignore  .pre-commit-config.yaml  DESIGN.md  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  convexhire-design-system.json  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  API_TESTING_EXAMPLES.md  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  alembic.ini  convexhire.db  main.py  pyproject.toml  pytest.ini  requirements.txt  reset_db.py  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 6f01d4722332_add_skills_table.py  a01b18f4f1e2_remove_redundant_profile_fields.py  bbc1b850ff7a_initial_db_setup_with_users_job_.py  c95a2efe2e10_rename_job_id_column.py
backend/app/: __init__.py
backend/app/agents/jd_generator/: graph.py  prompts.py
backend/app/agents/scheduler/: __init__.py  main.py  templates.py
backend/app/agents/shortlisting/: __init__.py  graph.py  (+1 more)
backend/app/api/: __init__.py  auth.py  candidate.py  candidate_applications.py  dependencies.py  jobs.py  jobs_crud.py  organization.py  resume.py  stats.py  users.py  websocket.py
backend/app/core/: __init__.py  authorization.py  config.py  current_datetime.py  database.py  dependencies.py  exceptions.py  lifespan.py  limiter.py  logging.py  logging_config.py  middleware.py  ml.py  ml_model.py  model_provider.py  responses.py  scheduler.py  security.py  websocket_manager.py
backend/app/db/: __init__.py  session.py
backend/app/integrations/: __init__.py
backend/app/models/: __init__.py  application.py  candidate.py  company.py  job.py  organization.py  profile.py  resume.py  skill.py  user.py
backend/app/repositories/: application_repo.py  enhanced_user_repo.py  job_repo.py  user_repo.py
backend/app/schemas/: __init__.py  application.py  candidate.py  job.py  organization.py  profile.py  recruiter_candidate.py  resume.py  shared.py  skill.py  user.py
backend/app/services/: __init__.py  application_service.py  auth_service.py  job_service.py  profile_service.py  resume_service.py  skill_service.py  user_service.py  vector_job_service.py
backend/app/utils/: common.py
backend/app/vector/: client.py
backend/app/worker/: scheduler.py
backend/data/: applications.json  jobs.json  users.json
backend/migrations/: env.py
backend/migrations/versions/: 686cf481a72e_add_shortlist_status_to_job_table.py  902682dbc72c_add_shortlist_status_to_job_table.py  fe0f2b338b5e_initial_database.py
backend/notebooks/: semantic_jobs_recommendation.ipynb
backend/tests/: conftest.py  repomix-output.xml  test_resume_parsing.py
backend/tests/unit/: test_candidate_profile_service.py  test_organization_service.py  test_recruiter_crud.py  test_resume_service.py
(+495 files in other folders)
