[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "docling>=2.63.0",
    "fastapi[standard]>=0.118.2",
    "httpx>=0.28.1",
    "langchain-groq>=1.0.0",
    "langgraph>=1.0.3",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "python-jose>=3.5.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.1",
    "sqlalchemy>=2.0.44",
    "starlette>=0.48.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "notebook>=7.4.7",
    "pandas>=2.3.3",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "ruff>=0.14.8",
    "supabase>=2.22.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
