[project]
name = "convexhire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "fastapi[standard]>=0.124.4",
    "httpx>=0.28.1",
    "langchain-groq>=1.1.1",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.5",
    "llama-parse>=0.6.90",
    "llm-guard>=0.3.16",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pip>=25.3",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "qdrant-client>=1.16.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "starlette>=0.50.0",
    "tqdm>=4.67.1",
    "langchain-google-genai>=4.2.0",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
